# maildir

./: Cargo.toml  HACKING.md  README.md
examples/: explain.rs
maildir-testdata/: Cargo.toml  README.md
maildir-testdata/src/: lib.rs
tests/: smoke.rs
